<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>654</width>
    <height>360</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QTextEdit" name="textEdit_Test">
   <property name="geometry">
    <rect>
     <x>60</x>
     <y>50</y>
     <width>281</width>
     <height>171</height>
    </rect>
   </property>
  </widget>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>60</x>
     <y>30</y>
     <width>56</width>
     <height>12</height>
    </rect>
   </property>
   <property name="text">
    <string>TextLabel</string>
   </property>
  </widget>
  <widget class="QWidget" name="verticalLayoutWidget">
   <property name="geometry">
    <rect>
     <x>360</x>
     <y>50</y>
     <width>241</width>
     <height>172</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QPushButton" name="btn_printTextEdit">
      <property name="text">
       <string>Print Text Edit</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="btn_clearTextEdit">
      <property name="text">
       <string>Clear Text Edit</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="btn_setFont">
      <property name="text">
       <string>Set Font</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="btn_setFontItalic">
      <property name="text">
       <string>Set Font Italic</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="btn_setFontColorRed">
      <property name="text">
       <string>Set Font Color Red</string>
      </property>
     </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPushButton" name="btn_fontSizeUp">
        <property name="text">
         <string>Font Size Up</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btn_fontSizeDown">
        <property name="text">
         <string>Font Size Down</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
